--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
   width: 100vw;
   overflow: hidden;
   box-sizing: border-box;
-  background-color: var(--app-background);
+  background-color: var(--window-bg-color);
   border-radius: var(--app-border-radius);
 
   .onboarding {
