--- a/src/app/features/modals/settings/export-modal/export-modal.component.html
+++ b/src/app/features/modals/settings/export-modal/export-modal.component.html
@@ -15,7 +15,7 @@
       <p>Preparing export options...</p>
     </div>
   } @else {
-    <div class="modal-content custom-scrollbar">
+    <div class="modal-content">
       <div class="section-group">
         <h3 class="section-label">Select Export Type</h3>
 
