--- a/src/app/features/modals/settings/logs-modal/logs-modal.component.html
+++ b/src/app/features/modals/settings/logs-modal/logs-modal.component.html
@@ -83,7 +83,7 @@
             class="log-entry"
             [class.expanded]="isExpanded(log)"
             [class.has-context]="!!log.context"
-            [ngClass]="log.level"
+            [class]="log.level"
           >
             <!-- Log Header Line -->
             <div
