--- a/src/app/features/modals/settings/preferences-modal/preferences-modal.component.html
+++ b/src/app/features/modals/settings/preferences-modal/preferences-modal.component.html
@@ -104,8 +104,8 @@
                     @if (isGeneralTab) {
                       <div class="actions">
                         <button
-                          mat-button
-                          class="reset-button"
+                          mat-raised-button
+                          class="warn"
                           (click)="resetSettings()"
                           aria-label="Reset all settings to default values"
                         >
