--- a/src/app/layout/titlebar/titlebar.component.html
+++ b/src/app/layout/titlebar/titlebar.component.html
@@ -78,7 +78,7 @@
         aria-label="System theme"
       >
         @if ((currentTheme$ | async) === 'system') {
-          <mat-icon svgIcon="circle-check" class="checkmark" aria-hidden="true"></mat-icon>
+          <mat-icon svgIcon="circle-check" class="checkmark accent" aria-hidden="true"></mat-icon>
         }
       </button>
 
