--- a/src/app/features/components/dashboard/app-overview/app-overview.component.scss
+++ b/src/app/features/components/dashboard/app-overview/app-overview.component.scss
@@ -53,7 +53,7 @@
     padding: var(--space-xl) var(--space-xl) var(--space-md) var(--space-xl);
 
     .panel-title-content {
-      color: var(--app-text-color);
+      color: var(--window-fg-color);
       font-size: var(--font-size-md);
       display: flex;
       align-items: center;
@@ -67,13 +67,13 @@
       }
 
       .remote-count {
-        color: var(--secondary-text-color);
+        color: var(--dim-color);
         font-size: var(--font-size-base);
         font-weight: 400;
         padding: var(--space-xxs) var(--space-xs);
         border-radius: var(--radius-sm);
         background: rgba(var(--primary-color-rgb), 0.1);
-        border: 1px solid rgba(var(--primary-color-rgb), 0.2);
+        box-shadow: 0 0 0 1px var(--card-shade-color);
       }
     }
   }
